Closed
Bug 1252713
Opened 9 years ago
Closed 9 years ago
Fix FILES_PER_UNIFIED_FILE=1 bustage in js/
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla47
People
(Reporter: fitzgen, Assigned: fitzgen)
References
Details
Attachments
(1 file, 1 obsolete file)
|
5.99 KB,
patch
|
terrence
:
review+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8725497 -
Flags: review?(terrence)
| Assignee | ||
Updated•9 years ago
|
| Assignee | ||
Comment 3•9 years ago
|
||
Comment 4•9 years ago
|
||
Comment on attachment 8725497 [details] [diff] [review]
Fix FILES_PER_UNIFIED_FILE=1 bustage in js/
Review of attachment 8725497 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks! Sorry you got stuck with the short straw this time.
Attachment #8725497 -
Flags: review?(terrence) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
Fix the bad header include order in the last patch.
Attachment #8725741 -
Flags: review?(terrence)
| Assignee | ||
Updated•9 years ago
|
Attachment #8725497 -
Attachment is obsolete: true
Comment 6•9 years ago
|
||
Comment on attachment 8725741 [details] [diff] [review]
Fix FILES_PER_UNIFIED_FILE=1 bustage in js/
Review of attachment 8725741 [details] [diff] [review]:
-----------------------------------------------------------------
Yup, still good to go.
Attachment #8725741 -
Flags: review?(terrence) → review+
| Assignee | ||
Comment 7•9 years ago
|
||
Woops sorry for the duplicate review!
New try push: https://treeherder.mozilla.org/#/jobs?repo=try&revision=c3c3ecbd56f1
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Comment 9•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Comment 10•9 years ago
|
||
Somehow this also affects building on ppc with unified sources in 46. Can this be uplifted?
Flags: needinfo?(nfitzgerald)
Comment 11•9 years ago
|
||
(In reply to Mike Hommey [:glandium] from comment #10)
> Somehow this also affects building on ppc with unified sources in 46. Can
> this be uplifted?
In file included from /«PKGBUILDDIR»/build-browser/js/src/jsapi-tests/Unified_cpp_js_src_jsapi-tests5.cpp:11:0:
/«PKGBUILDDIR»/js/src/jsapi-tests/testXDR.cpp: In member function 'virtual bool cls_testXDR_sourceMap::run(JS::HandleObject)':
/«PKGBUILDDIR»/js/src/jsapi-tests/testXDR.cpp:133:9: error: 'UniqueTwoByteChars' was not declared in this scope
UniqueTwoByteChars expected_wrapper(js::InflateString(cx, *sm, &len));
^
/«PKGBUILDDIR»/js/src/jsapi-tests/testXDR.cpp:133:9: note: suggested alternatives:
In file included from /«PKGBUILDDIR»/build-browser/dist/include/js/HeapAPI.h:15:0,
from /«PKGBUILDDIR»/build-browser/dist/include/js/GCAPI.h:12,
from /«PKGBUILDDIR»/build-browser/dist/include/js/RootingAPI.h:19,
from /«PKGBUILDDIR»/build-browser/dist/include/js/GCVector.h:12,
from /«PKGBUILDDIR»/js/src/jscntxt.h:14,
from /«PKGBUILDDIR»/js/src/vm/RegExpObject.h:13,
from /«PKGBUILDDIR»/js/src/builtin/RegExp.h:10,
from /«PKGBUILDDIR»/js/src/jscompartment.h:15,
from /«PKGBUILDDIR»/js/src/jsapi-tests/testWeakMap.cpp:8,
from /«PKGBUILDDIR»/build-browser/js/src/jsapi-tests/Unified_cpp_js_src_jsapi-tests5.cpp:2:
/«PKGBUILDDIR»/build-browser/dist/include/js/Utility.h:489:56: note: 'JS::UniqueTwoByteChars'
typedef mozilla::UniquePtr<char16_t[], JS::FreePolicy> UniqueTwoByteChars;
^
/«PKGBUILDDIR»/build-browser/dist/include/js/Utility.h:489:56: note: 'JS::UniqueTwoByteChars'
| Assignee | ||
Comment 12•9 years ago
|
||
Comment on attachment 8725741 [details] [diff] [review]
Fix FILES_PER_UNIFIED_FILE=1 bustage in js/
Approval Request Comment
[Feature/regressing bug #]:
Unclear; probably many.
[User impact if declined]:
PPC builds will apparently break?
[Describe test coverage new/current, TreeHerder]:
Didn't introduce any changes, just added missing forward declarations and #includes. So all the existing tests which have been passing since this was landed.
[Risks and why]:
Very little, this is all trivial changes and assessing potential breakage is as simple as checking that the build completes successfully.
[String/UUID change made/needed]:
None.
Flags: needinfo?(nfitzgerald)
Attachment #8725741 -
Flags: approval-mozilla-aurora?
Comment on attachment 8725741 [details] [diff] [review]
Fix FILES_PER_UNIFIED_FILE=1 bustage in js/
I was told that this is needed for Linux Distro builds. Aurora47+
Attachment #8725741 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
(In reply to Mike Hommey [:glandium] from comment #10)
> Somehow this also affects building on ppc with unified sources in 46. Can
> this be uplifted?
Nick, if we need this on 46, you need to request an uplift to Beta (46).
Flags: needinfo?(nfitzgerald)
status-firefox46:
--- → affected
Comment 15•9 years ago
|
||
It's already on aurora, by virtue of having landed during on m-c during the 47 cycle.
Comment on attachment 8725741 [details] [diff] [review]
Fix FILES_PER_UNIFIED_FILE=1 bustage in js/
Ok since this is already in 47, it needs uplifting to Beta46. Taking it.
Flags: needinfo?(nfitzgerald)
Attachment #8725741 -
Flags: approval-mozilla-aurora+ → approval-mozilla-beta+
Comment 17•9 years ago
|
||
| bugherder uplift | ||
Comment 18•9 years ago
|
||
| bugherder uplift | ||
Comment 19•9 years ago
|
||
backed out for bustage like https://treeherder.mozilla.org/logviewer.html#?job_id=902094&repo=mozilla-beta
Flags: needinfo?(nfitzgerald)
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(nfitzgerald) → needinfo?(mh+mozilla)
Comment 20•9 years ago
|
||
No wonder it failed, Policy.h didn't exist in beta so the patch actually didn't apply.
Flags: needinfo?(mh+mozilla)
Comment 21•9 years ago
|
||
(In reply to Mike Hommey [:glandium] from comment #20)
> No wonder it failed, Policy.h didn't exist in beta so the patch actually
> didn't apply.
In fact, the build went through, so I presume the only thing that was a problem is Policy.h existing. Carsten, can you reland without Policy.h (how did you end up adding the file, instead of bailing, btw?)
Flags: needinfo?(cbook)
Updated•9 years ago
|
Flags: needinfo?(cbook)
Comment 22•9 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•