Bug 1252713 - Fix FILES_PER_UNIFIED_FILE=1 bustage in js/. r=terrence